feat: add page, header, content, profile blocks

--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Место</title>
+    <link rel="stylesheet" href="pages/index.css">
 </head>
 <body>
     <div class="page">
-        <header class="header"></header>
-        <main class="content"></main>
+        <header class="header">
+            <img class="header__logo" src="images/logo.svg" alt="логоs">
+        </header>
+        <main class="content">
+            <section class="profile">
+                <img class="profile__avatar" src="images/image.jpg" alt="аватар">
+                <div class="profile__info">
+                    <h1 class="profile__title">Жак-Ив Кусто</h1>
+                    <button class="profile__edit-button"><img src="images/Vector.svg" alt="изменить"></button>
+                    <p class="profile__subtitle">Исследователь океана</p>
+                </div>
+                <button class="profile__add-button"><img src="images/add.svg" alt="добавить"></button>
+            </section>
+        </main>
         <footer class="footer"></footer>
     </div>
 </body>
