feat: add elements, footer blocks

--- a/index.html
+++ b/index.html
@@ -22,8 +22,42 @@
                 </div>
                 <button class="profile__add-button"><img src="images/add.svg" alt="добавить"></button>
             </section>
+            <ul class="elements">
+                <li class="element">
+                    <img class="element__image" src="images/kirill-pershin-1088404-unsplash.jpg" alt="изображение">
+                    <h2 class="element__title">Карачаевск</h2>
+                    <img class="element__like" src="images/like.svg" alt="лайк">
+                </li>
+                <li class="element">
+                    <img class="element__image" src="images/elbrus.jpg" alt="изображение">
+                    <h2 class="element__title">Гора Эльбрус</h2>
+                    <img class="element__like" src="images/like.svg" alt="лайк">
+                </li>
+                <li class="element">
+                    <img class="element__image" src="images/dombai.jpg" alt="изображение">
+                    <h2 class="element__title">Домбай</h2>
+                    <img class="element__like" src="images/like.svg" alt="лайк">
+                </li>
+                <li class="element">
+                    <img class="element__image" src="images/elbrus.jpg" alt="изображение">
+                    <h2 class="element__title">Гора Эльбрус</h2>
+                    <img class="element__like" src="images/like.svg" alt="лайк">
+                </li>
+                <li class="element">
+                    <img class="element__image" src="images/dombai.jpg" alt="изображение">
+                    <h2 class="element__title">Домбай</h2>
+                    <img class="element__like" src="images/like.svg" alt="лайк">
+                </li>
+                <li class="element">
+                    <img class="element__image" src="images/kirill-pershin-1088404-unsplash.jpg" alt="изображение">
+                    <h2 class="element__title">Карачаево-Чeркессия</h2>
+                    <img class="element__like" src="images/like.svg" alt="лайк">
+                </li>
+            </ul>
         </main>
-        <footer class="footer"></footer>
+        <footer class="footer">
+            <p class="footer__copyright">© 2020 Mesto Russia</p>
+        </footer>
     </div>
 </body>
 </html>
