feat: add responsive design

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,57 +8,57 @@
     <title>Место</title>
     <link rel="stylesheet" href="pages/index.css">
 </head>
-<body>
-    <div class="page">
-        <header class="header">
-            <img class="header__logo" src="images/logo.svg" alt="логоs">
-        </header>
-        <main class="content">
-            <section class="profile">
-                <img class="profile__avatar" src="images/image.jpg" alt="аватар">
-                <div class="profile__info">
-                    <h1 class="profile__title">Жак-Ив Кусто</h1>
-                    <button class="profile__edit-button"><img src="images/Vector.svg" alt="изменить"></button>
-                    <p class="profile__subtitle">Исследователь океана</p>
-                </div>
-                <button class="profile__add-button"><img src="images/add.svg" alt="добавить"></button>
-            </section>
-            <ul class="elements">
-                <li class="element">
-                    <img class="element__image" src="images/kirill-pershin-1088404-unsplash.jpg" alt="изображение">
-                    <h2 class="element__title">Карачаевск</h2>
-                    <img class="element__like" src="images/like.svg" alt="лайк">
-                </li>
-                <li class="element">
-                    <img class="element__image" src="images/elbrus.jpg" alt="изображение">
-                    <h2 class="element__title">Гора Эльбрус</h2>
-                    <img class="element__like" src="images/like.svg" alt="лайк">
-                </li>
-                <li class="element">
-                    <img class="element__image" src="images/dombai.jpg" alt="изображение">
-                    <h2 class="element__title">Домбай</h2>
-                    <img class="element__like" src="images/like.svg" alt="лайк">
-                </li>
-                <li class="element">
-                    <img class="element__image" src="images/elbrus.jpg" alt="изображение">
-                    <h2 class="element__title">Гора Эльбрус</h2>
-                    <img class="element__like" src="images/like.svg" alt="лайк">
-                </li>
-                <li class="element">
-                    <img class="element__image" src="images/dombai.jpg" alt="изображение">
-                    <h2 class="element__title">Домбай</h2>
-                    <img class="element__like" src="images/like.svg" alt="лайк">
-                </li>
-                <li class="element">
-                    <img class="element__image" src="images/kirill-pershin-1088404-unsplash.jpg" alt="изображение">
-                    <h2 class="element__title">Карачаево-Чeркессия</h2>
-                    <img class="element__like" src="images/like.svg" alt="лайк">
-                </li>
-            </ul>
-        </main>
-        <footer class="footer">
-            <p class="footer__copyright">© 2020 Mesto Russia</p>
-        </footer>
-    </div>
+
+<body class="page">
+    <header class="header">
+        <img class="header__logo" src="images/logo.svg" alt="логоs">
+    </header>
+    <main class="content">
+        <section class="profile">
+            <img class="profile__avatar" src="images/image.jpg" alt="аватар">
+            <div class="profile__info">
+                <h1 class="profile__title">Жак-Ив Кусто</h1>
+                <button class="profile__edit-button"><img src="images/Vector.svg" alt="изменить"></button>
+                <p class="profile__subtitle">Исследователь океана</p>
+            </div>
+            <button class="profile__add-button"><img src="images/add.svg" alt="добавить"></button>
+        </section>
+        <ul class="elements">
+            <li class="element">
+                <img class="element__image" src="images/kirill-pershin-1088404-unsplash.jpg" alt="изображение">
+                <h2 class="element__title">Карачаевск</h2>
+                <img class="element__like" src="images/like.svg" alt="лайк">
+            </li>
+            <li class="element">
+                <img class="element__image" src="images/elbrus.jpg" alt="изображение">
+                <h2 class="element__title">Гора Эльбрус</h2>
+                <img class="element__like" src="images/like.svg" alt="лайк">
+            </li>
+            <li class="element">
+                <img class="element__image" src="images/dombai.jpg" alt="изображение">
+                <h2 class="element__title">Домбай</h2>
+                <img class="element__like" src="images/like.svg" alt="лайк">
+            </li>
+            <li class="element">
+                <img class="element__image" src="images/elbrus.jpg" alt="изображение">
+                <h2 class="element__title">Гора Эльбрус</h2>
+                <img class="element__like" src="images/like.svg" alt="лайк">
+            </li>
+            <li class="element">
+                <img class="element__image" src="images/dombai.jpg" alt="изображение">
+                <h2 class="element__title">Домбай</h2>
+                <img class="element__like" src="images/like.svg" alt="лайк">
+            </li>
+            <li class="element">
+                <img class="element__image" src="images/kirill-pershin-1088404-unsplash.jpg" alt="изображение">
+                <h2 class="element__title">Карачаево-Чeркессия</h2>
+                <img class="element__like" src="images/like.svg" alt="лайк">
+            </li>
+        </ul>
+    </main>
+    <footer class="footer">
+        <p class="footer__copyright">© 2020 Mesto Russia</p>
+    </footer>
 </body>
+
 </html>
