--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
         <img class="header__logo" src="images/logo.svg" alt="логоs">
     </header>
     <main class="content">
+        <div class="popup">
+            <div class="popup__container">
+                <button class="popup__close-btn"><img class="popup__close-image" src="images/close.svg" alt="закрыть"></button>
+                <form class="popup__form" action="send">
+                    <p class="popup__form-title">Редактировать профиль</p>
+                    <input class="popup__form-input" type="text">
+                    <input class="popup__form-input" type="text">
+                    <button class="popup__form-btn">Сохранить</button>
+                </form>
+            </div>
+        </div>
         <section class="profile">
             <img class="profile__avatar" src="images/image.jpg" alt="аватар">
             <div class="profile__info">
