fear: add javaScript to open and close popup, edit name and subtitle profile

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <button class="popup__close-btn"><img class="popup__close-image" src="images/close.svg" alt="закрыть"></button>
                 <form class="popup__form" action="send">
                     <p class="popup__form-title">Редактировать профиль</p>
-                    <input class="popup__form-input" type="text">
-                    <input class="popup__form-input" type="text">
+                    <input id="title" class="popup__form-input" type="text">
+                    <input id="subtitle" class="popup__form-input" type="text">
                     <button class="popup__form-btn">Сохранить</button>
                 </form>
             </div>
@@ -70,6 +70,7 @@
     <footer class="footer">
         <p class="footer__copyright">© 2020 Mesto Russia</p>
     </footer>
+    <script src="pages/index.js"></script>
 </body>
 
 </html>
