--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
         <div class="popup">
             <div class="popup__container">
                 <button type="button" class="popup__close-btn"><img class="popup__close-image" src="images/close.svg" alt="закрыть"></button>
-                <form name="edit-profile" class="popup__form" action="send">
+                <form id="edit-profile-form" name="edit-profile" class="popup__form" action="send">
                     <h2 class="popup__form-title">Редактировать профиль</h2>
                     <input id="title" class="popup__form-input" type="text">
                     <input id="subtitle" class="popup__form-input" type="text">
                     <button type="submit" class="popup__form-btn">Сохранить</button>
+                </form>
+                <form id="add-place-form" name="add-place" class="popup__form" action="send">
+                    <h2 class="popup__form-title">Новое место</h2>
+                    <input placeholder="Название" id="name-input" class="popup__form-input" type="text">
+                    <input placeholder="Ссылка на картинку" id="image-input" class="popup__form-input" type="text">
+                    <button type="submit" class="popup__form-btn">создать</button>
                 </form>
             </div>
         </div>
