--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <ul class="elements">
             <template id="template">
                 <li class="element">
+                    <button class="element__delete" type="button"></button>
                     <img class="element__image" alt="изображение">
                     <div class="element__info">
                         <h2 class="element__title"></h2>
