feat: add cards image popup

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                     <input placeholder="Ссылка на картинку" id="image-input" class="popup__form-input" type="text">
                     <button type="submit" class="popup__form-btn">создать</button>
                 </form>
+                <div class="popup__card-content">
+                    <img class="popup__card-img" src="" alt="картинка">
+                    <p class="popup__card-name"></p>
+                </div>
             </div>
         </div>
         <section class="profile">
