fix: fixed validation error

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <button type="submit" class="popup__form-btn">создать</button>
                 </form>
                 <div class="popup__card-content">
-                    <img class="popup__card-img" src="" alt="картинка">
+                    <img class="popup__card-img" src="/d" alt="картинка">
                     <p class="popup__card-name"></p>
                 </div>
             </div>
