--- a/index.html
+++ b/index.html
@@ -14,21 +14,31 @@
         <img class="header__logo" src="images/logo.svg" alt="логоs">
     </header>
     <main class="content">
-        <div class="popup">
+        <div class="popup popup_type_profile">
             <div class="popup__container">
-                <button type="button" class="popup__close-btn"><img class="popup__close-image" src="images/close.svg" alt="закрыть"></button>
+                <button type="button" class="popup__close-btn close_type_profile"><img class="popup__close-image" src="images/close.svg" alt="закрыть"></button>
                 <form id="edit-profile-form" name="edit-profile" class="popup__form" action="send">
                     <h2 class="popup__form-title">Редактировать профиль</h2>
                     <input id="title" class="popup__form-input" type="text">
                     <input id="subtitle" class="popup__form-input" type="text">
                     <button type="submit" class="popup__form-btn">Сохранить</button>
                 </form>
+            </div>
+        </div>
+        <div class="popup popup_add_card">
+            <div class="popup__container">
+                <button type="button" class="popup__close-btn close_add_card"><img class="popup__close-image" src="images/close.svg" alt="закрыть"></button>
                 <form id="add-place-form" name="add-place" class="popup__form" action="send">
                     <h2 class="popup__form-title">Новое место</h2>
                     <input placeholder="Название" id="name-input" class="popup__form-input" type="text">
                     <input placeholder="Ссылка на картинку" id="image-input" class="popup__form-input" type="text">
                     <button type="submit" class="popup__form-btn">создать</button>
                 </form>
+            </div>
+        </div>
+        <div class="popup popup_view_image">
+            <div class="popup__container">
+                <button type="button" class="popup__close-btn close_view_image"><img class="popup__close-image" src="images/close.svg" alt="закрыть"></button>
                 <div class="popup__card-content">
                     <img class="popup__card-img" src="/d" alt="картинка">
                     <p class="popup__card-name"></p>
