--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
         <div class="popup popup_type_profile">
             <div class="popup__container">
                 <button type="button" id="close-profile" class="popup__close-btn"><img class="popup__close-image" src="images/close.svg" alt="закрыть"></button>
-                <form id="edit-profile-form" name="edit-profile" class="popup__form" action="send">
+                <form novalidate id="edit-profile-form" name="edit-profile" class="popup__form" action="send">
                     <h2 class="popup__form-title">Редактировать профиль</h2>
-                    <input id="title" class="popup__form-input" type="text">
-                    <input id="subtitle" class="popup__form-input" type="text">
+                    <input minlength="2" maxlength="40" required id="title" class="popup__form-input" type="text">
+                    <span class="popup__form-input-error title-error"></span>
+                    <input minlength="2" maxlength="200" required id="subtitle" class="popup__form-input" type="text">
+                    <span class="popup__form-input-error subtitle-error"></span>
                     <button type="submit" class="popup__form-btn">Сохранить</button>
                 </form>
             </div>
@@ -28,10 +30,12 @@
         <div class="popup popup_add_card">
             <div class="popup__container">
                 <button type="button" id="close-card" class="popup__close-btn"><img class="popup__close-image" src="images/close.svg" alt="закрыть"></button>
-                <form id="add-place-form" name="add-place" class="popup__form" action="send">
+                <form novalidate id="add-place-form" name="add-place" class="popup__form" action="send">
                     <h2 class="popup__form-title">Новое место</h2>
-                    <input placeholder="Название" id="name-input" class="popup__form-input" type="text">
-                    <input placeholder="Ссылка на картинку" id="image-input" class="popup__form-input" type="text">
+                    <input minlength="2" maxlength="30" required placeholder="Название" id="name-input" class="popup__form-input" type="text">
+                    <span class="popup__form-input-error name-input-error"></span>
+                    <input required placeholder="Ссылка на картинку" id="image-input" class="popup__form-input" type="url">
+                    <span class="popup__form-input-error image-input-error"></span>
                     <button type="submit" class="popup__form-btn">создать</button>
                 </form>
             </div>
@@ -71,6 +75,7 @@
         <p class="footer__copyright">© 2020 Mesto Russia</p>
     </footer>
     <script src="pages/index.js"></script>
+    <script src="pages/validate.js"></script>
 </body>
 
 </html>
