refactor: refactor code according to review comments

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     <footer class="footer">
         <p class="footer__copyright">© 2020 Mesto Russia</p>
     </footer>
-    <script src="pages/index.js"></script>
-    <script src="pages/validate.js"></script>
+    <script src="pages/scripts/index.js"></script>
+    <script src="pages/scripts/validate.js"></script>
 </body>
 
 </html>
