--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         <div class="popup popup_add_card">
             <div class="popup__container">
                 <button type="button" id="close-card" class="popup__close-btn"><img class="popup__close-image" src="images/close.svg" alt="закрыть"></button>
-                <form novalidate id="add-place-form" name="add-place" class="popup__form" action="send">
+                <form novalidate id="add-place-form" name="add-place" class="popup__form popup__form-place" action="send">
                     <h2 class="popup__form-title">Новое место</h2>
-                    <input minlength="2" maxlength="30" required placeholder="Название" id="name-input" class="popup__form-input" type="text">
+                    <input name="name" minlength="2" maxlength="30" required placeholder="Название" id="name-input" class="popup__form-input" type="text">
                     <span class="popup__form-input-error name-input-error"></span>
-                    <input required placeholder="Ссылка на картинку" id="image-input" class="popup__form-input" type="url">
+                    <input name="link" required placeholder="Ссылка на картинку" id="image-input" class="popup__form-input" type="url">
                     <span class="popup__form-input-error image-input-error"></span>
                     <button type="submit" class="popup__form-btn">создать</button>
                 </form>
