--- a/src/index.html
+++ b/src/index.html
@@ -6,17 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Место</title>
-    <link rel="stylesheet" href="pages/index.css">
 </head>
 
 <body class="page">
     <header class="header">
-        <img class="header__logo" src="images/logo.svg" alt="логоs">
+        <img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="лого">
     </header>
     <main class="content">
         <div class="popup popup_type_profile">
             <div class="popup__container">
-                <button type="button" id="close-profile" class="popup__close-btn"><img class="popup__close-image" src="images/close.svg" alt="закрыть"></button>
+                <button type="button" id="close-profile" class="popup__close-btn"><img class="popup__close-image" src="<%=require('./images/close.svg')%>" alt="закрыть"></button>
                 <form novalidate id="edit-profile-form" name="edit-profile" class="popup__form" action="send">
                     <h2 class="popup__form-title">Редактировать профиль</h2>
                     <input minlength="2" maxlength="40" required id="title" class="popup__form-input" type="text">
@@ -29,7 +28,7 @@
         </div>
         <div class="popup popup_add_card">
             <div class="popup__container">
-                <button type="button" id="close-card" class="popup__close-btn"><img class="popup__close-image" src="images/close.svg" alt="закрыть"></button>
+                <button type="button" id="close-card" class="popup__close-btn"><img class="popup__close-image" src="<%=require('./images/close.svg')%>" alt="закрыть"></button>
                 <form novalidate id="add-place-form" name="add-place" class="popup__form popup__form-place" action="send">
                     <h2 class="popup__form-title">Новое место</h2>
                     <input name="name" minlength="2" maxlength="30" required placeholder="Название" id="name-input" class="popup__form-input" type="text">
@@ -42,7 +41,7 @@
         </div>
         <div class="popup popup_view_image">
             <div class="popup__container">
-                <button type="button" id="close-image" class="popup__close-btn"><img class="popup__close-image" src="images/close.svg" alt="закрыть"></button>
+                <button type="button" id="close-image" class="popup__close-btn"><img class="popup__close-image" src="<%=require('./images/close.svg')%>" alt="закрыть"></button>
                 <div class="popup__card-content">
                     <img class="popup__card-img" src="/d" alt="картинка">
                     <p class="popup__card-name"></p>
@@ -50,7 +49,7 @@
             </div>
         </div>
         <section class="profile">
-            <img class="profile__avatar" src="images/image.jpg" alt="аватар">
+            <img class="profile__avatar" src="<%=require('./images/image.jpg')%>" alt="аватар">
             <div class="profile__info">
                 <h1 class="profile__title">Жак-Ив Кусто</h1>
                 <button type="button" class="profile__edit-button"></button>
@@ -74,7 +73,6 @@
     <footer class="footer">
         <p class="footer__copyright">© 2020 Mesto Russia</p>
     </footer>
-    <script type="module" src="scripts/index.js"></script>
 </body>
 
 </html>
