feat: add profile edit from page to server api

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
                     <h2 class="popup__form-title">Редактировать профиль</h2>
                     <input name="name" minlength="2" maxlength="40" required id="title" class="popup__form-input" type="text">
                     <span class="popup__form-input-error title-error"></span>
-                    <input name="info" minlength="2" maxlength="200" required id="subtitle" class="popup__form-input" type="text">
+                    <input name="about" minlength="2" maxlength="200" required id="subtitle" class="popup__form-input" type="text">
                     <span class="popup__form-input-error subtitle-error"></span>
                     <button type="submit" class="popup__form-btn">Сохранить</button>
                 </form>
