feat: add likes counter from server api

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
             <div class="popup__container">
                 <button type="button" id="close-image" class="popup__close-btn"><img class="popup__close-image" src="<%=require('./images/close.svg')%>" alt="закрыть"></button>
                 <div class="popup__card-content">
-                    <img class="popup__card-img" src="/d" alt="картинка">
+                    <img class="popup__card-img" src="/" alt="картинка">
                     <p class="popup__card-name"></p>
                 </div>
             </div>
@@ -65,6 +65,7 @@
                     <div class="element__info">
                         <h2 class="element__title"></h2>
                         <button class="element__like" type="button"></button>
+                        <span class="element__like-count"></span>
                     </div>
                 </li>
             </template>
