--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,9 @@
             </div>
         </div>
         <section class="profile">
-            <img class="profile__avatar" src="<%=require('./images/image.jpg')%>" alt="аватар">
+            <div class="profile__avatar-container">
+                <img class="profile__avatar" alt="аватар">
+            </div>
             <div class="profile__info">
                 <h1 class="profile__title">Жак-Ив Кусто</h1>
                 <button type="button" class="profile__edit-button"></button>
