feat: add profile photo edit to page and server api

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
         </div>
         <section class="profile">
             <div class="profile__avatar-container">
-                <img class="profile__avatar" alt="аватар">
+                <img class="profile__avatar" src="#" alt="аватар">
             </div>
             <div class="profile__info">
                 <h1 class="profile__title">Жак-Ив Кусто</h1>
