--- a/src/index.html
+++ b/src/index.html
@@ -64,8 +64,8 @@
                 <button type="button" class="popup__close-btn"><img class="popup__close-image" src="<%=require('./images/close.svg')%>" alt="закрыть"></button>
                 <form novalidate name="edit-avatar" class="popup__form popup__form-avatar" action="send">
                     <h2 class="popup__form-title">Обновить аватар</h2>
-                    <input name="link" required placeholder="Ссылка на картинку" class="popup__form-input" type="url">
-                    <span class="popup__form-input-error image-input-error"></span>
+                    <input name="link" required placeholder="Ссылка на картинку" id="edit-input" class="popup__form-input" type="url">
+                    <span class="popup__form-input-error edit-input-error"></span>
                     <button type="submit" class="popup__form-btn">Сохранить</button>
                 </form>
             </div>
